# duplicacy-exporter

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  codecov.yml  dashboard.json  docker-compose.yml  duplicacy_exporter.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: docker-publish.yml  dockerhub-description.yml  pypi-publish.yml  test.yml  tests.yml
charts/: Chart.yaml  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  exporter-deployment.yaml  exporter-service.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml  shared-logs-pvc.yaml
charts/templates/tests/: test-connection.yaml
tests/: test_exporter.py  test_persistence.py
tests/fixtures/: webui_report.json
