[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicacy-exporter"
version = "0.3.4"
description = "Prometheus exporter for Duplicacy backup metrics -- real-time progress, speed, and post-run summaries"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "GeiserX", email = "9169332+GeiserX@users.noreply.github.com" },
]
keywords = [
    "duplicacy",
    "prometheus",
    "exporter",
    "backup",
    "monitoring",
    "grafana",
    "metrics",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "prometheus_client>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/GeiserX/duplicacy-exporter"
Repository = "https://github.com/GeiserX/duplicacy-exporter"
Issues = "https://github.com/GeiserX/duplicacy-exporter/issues"

[project.scripts]
duplicacy-exporter = "duplicacy_exporter:main"

[tool.setuptools]
py-modules = ["duplicacy_exporter"]
